Wrong font corrected

--- a/app/views/stylesheets/fair_dates/index.css
+++ b/app/views/stylesheets/fair_dates/index.css
@@ -31,7 +31,6 @@
 #fair_dates_mobile .info {
   margin: 0ex;
   padding: 0ex 1em;
-  font-family: 'Sans', sans-serif;
   font-size: 90%;
 }
 #fair_dates_mobile .date {
